# compgraph

./: CMakeLists.txt  main.cpp
Hw_2_2/: CMakeLists.txt  main.cpp
Hw_2_3/: CMakeLists.txt  main.cpp
Hw_2_4/: CMakeLists.txt  main.cpp
Hw_2_5/: CMakeLists.txt  main.cpp
